--- a/5. Github-Copilot-agent.md
+++ b/5. Github-Copilot-agent.md
@@ -7,3 +7,38 @@
 ---
 
 ## Use of @workspace agent
+
+## Generating a code
+Generate boilerplate code or specific functions in the context of your workspace.
+
+```
+@workspace generate a controller file for endpoint 'v1/icici/payments' which will be post webhook call from third party service.
+```
+![image](https://github.com/user-attachments/assets/50e6f653-8dd9-431b-a312-fadcdcc31365)
+![image](https://github.com/user-attachments/assets/fc8c0191-47ef-4139-9821-3616b4f3d832)
+![image](https://github.com/user-attachments/assets/bf56566f-c43c-46ac-92ca-1b7a85d5f430)
+
+## Running tests
+Run tests for specific files or the entire project.
+
+```
+@workspace: Run tests in src/app/app.component.spec.ts
+```
+
+Ex: 
+
+![Screenshot 2024-08-04 094718](https://github.com/user-attachments/assets/6d839d33-bf7e-4597-821c-e0393970247a)
+
+## Searching for Code
+
+Search for specific code snippets or functions across your workspace.
+
+```
+@workspace find a function from project which is used for generating random alpha numeric code
+```
+
+![image](https://github.com/user-attachments/assets/5f9a50fe-3b92-4f3a-91da-dbb4e1501244)
+
+## Take git commands help according to project guidelines
+
+![image](https://github.com/user-attachments/assets/2d54c6f8-b439-4a4a-8ae9-1ef02a415065)
