--- a/5. Github-Copilot-agent.md
+++ b/5. Github-Copilot-agent.md
@@ -42,3 +42,8 @@ Search for specific code snippets or functions across your workspace.
 ## Take git commands help according to project guidelines
 
 ![image](https://github.com/user-attachments/assets/2d54c6f8-b439-4a4a-8ae9-1ef02a415065)
+
+## Take help for running ,linting and code formatting of app
+
+![image](https://github.com/user-attachments/assets/0decf283-dda1-40b6-a0af-aa813f94fd9c)
+
