--- a/5. Github-Copilot-agent.md
+++ b/5. Github-Copilot-agent.md
@@ -3,29 +3,36 @@
 ## Index
 
 1. [Use Of @workspace](#use-of-workspace-agent)
+2. [Generating a code with @workspace](#generating-a-code-with-workspace)
+3. [Running tests](#running-tests)
+4. [Searching for Code](#searching-for-code)
+5. [Take git commands help according to project guidelines](#take-git-commands-help-according-to-project-guidelines)
 
 ---
 
 ## Use of @workspace agent
 
-## Generating a code
+## Generating a code with @workspace
+
 Generate boilerplate code or specific functions in the context of your workspace.
 
 ```
 @workspace generate a controller file for endpoint 'v1/icici/payments' which will be post webhook call from third party service.
 ```
+
 ![image](https://github.com/user-attachments/assets/50e6f653-8dd9-431b-a312-fadcdcc31365)
 ![image](https://github.com/user-attachments/assets/fc8c0191-47ef-4139-9821-3616b4f3d832)
 ![image](https://github.com/user-attachments/assets/bf56566f-c43c-46ac-92ca-1b7a85d5f430)
 
 ## Running tests
+
 Run tests for specific files or the entire project.
 
 ```
 @workspace: Run tests in src/app/app.component.spec.ts
 ```
 
-Ex: 
+Ex:
 
 ![Screenshot 2024-08-04 094718](https://github.com/user-attachments/assets/6d839d33-bf7e-4597-821c-e0393970247a)
 
