--- a/4. Github-Copilot-Prompt-Collection.md
+++ b/4. Github-Copilot-Prompt-Collection.md
@@ -104,13 +104,18 @@ Modify below loop like that , if frequency is empty then add frequency= 'RECURRI
 
 ## Generate Unit test
 
-Ex: Generate unit tests covering all positive and negative scenarios , including edge cases. use reference of create-first-repayment-request-event-handler-service.spec.ts as correct example and generate accordingly, make sure you generate providers as same format as in create-first-repayment-request-event-handler-service.spec.ts. Cover all code execution flows for maximum coverage.
+Ex 1: Generate unit tests covering all positive and negative scenarios , including edge cases. use reference of create-first-repayment-request-event-handler-service.spec.ts as correct example and generate accordingly, make sure you generate providers as same format as in create-first-repayment-request-event-handler-service.spec.ts. Cover all code execution flows for maximum coverage.
 
 ![att_8_for_29884483](https://github.com/Talentica/github-copilot-knowledge-base/assets/109061225/981a7c82-a402-40cd-80c9-45ef4e5b46a5)
 
 Ex: We can create a starter setup for unit test like initializing mock app , adding dependencies ,etc. Then we need to write one unit test from our own , after if we just write our use case it will suggest automatically like below.
 
 ![image](https://github.com/user-attachments/assets/152bc8fc-9502-43b0-9c35-e3d39d167ce4)
+
+Ex 2 : Using @workspace agent
+![Screenshot 2024-08-04 102049](https://github.com/user-attachments/assets/3aa72d90-c8c4-4180-b5dd-691aaae8d2cc)
+![Screenshot 2024-08-04 102059](https://github.com/user-attachments/assets/314d1353-8fbb-4633-b380-18e862e6ccbe)
+![Screenshot 2024-08-04 102109](https://github.com/user-attachments/assets/27f69248-929f-4ce4-9e80-832eb321ed15)
 
 ## Writing regular expressions
 
