--- a/4. Github-Copilot-Prompt-Collection.md
+++ b/4. Github-Copilot-Prompt-Collection.md
@@ -22,10 +22,23 @@
 
 Generate a controller class as specified below.
 
+Ex 1 : Using top level comments
+
 - Create a nestjs controller to update repayment entity createdBy and frequency columns.
 - Generate controller script by taking reference from file mandate-creation.controller.ts.
 - Also consider a swagger documentation implementation as specified in mandate-creation.controller.ts.
   ![image-20240529-032138](https://github.com/Talentica/github-copilot-knowledge-base/assets/109061225/ecd86543-6b37-45ec-9d8a-ffa72eb95c40)
+
+Ex 2: Using @workspace agent
+
+```
+@workspace generate a controller file for endpoint 'v1/icici/payments' which will be post webhook call from third party service.
+```
+
+![image](https://github.com/user-attachments/assets/50e6f653-8dd9-431b-a312-fadcdcc31365)
+![image](https://github.com/user-attachments/assets/fc8c0191-47ef-4139-9821-3616b4f3d832)
+![image](https://github.com/user-attachments/assets/bf56566f-c43c-46ac-92ca-1b7a85d5f430)
+
 
 ## Prompt for service file code generation.
 
