--- a/4. Github-Copilot-Prompt-Collection.md
+++ b/4. Github-Copilot-Prompt-Collection.md
@@ -65,6 +65,11 @@ Ex 3: create a function to modify the createdBy of repayments in which created a
 
 ![image-20240529-034014](https://github.com/Talentica/github-copilot-knowledge-base/assets/109061225/b7667322-e374-4e67-b256-daae79d22f9e)
 
+Ex 4: Using workspace agent of copilot chat
+
+![image](https://github.com/user-attachments/assets/1ce5143a-1638-40cc-8932-fe65430968c1)
+
+
 ## Prompt for calling third party service
 
 Ex: call third party service to send a notification that we updated status of repayments using axios handle proper error handling
