--- a/4. Github-Copilot-Prompt-Collection.md
+++ b/4. Github-Copilot-Prompt-Collection.md
@@ -52,6 +52,20 @@ Generate a service class as specified below
 
 ![att_7_for_29884483](https://github.com/Talentica/github-copilot-knowledge-base/assets/109061225/6b277ddd-d5eb-4f9c-abd6-e2361dc5a386)
 
+## Prompt for generting db entity file
+
+```
+@workspace Create entity file for #file:icici-mandate-sequence.entity.ts , take reference of #file:repayment.entity.ts .
+
+Table name : IciciMandateSequence I have columns below.
+mandateId
+executeSeqNum
+notificationSeqNum
+```
+
+![image](https://github.com/user-attachments/assets/dfa19903-f04d-41b7-bc35-1479bdb51706)
+
+
 ## Prompt for generating db repository functions
 
 Ex 1: Create a function which take status and date as input and return the repayments with the given status and scheduledAt as the given date b/w 00 hours to 23 hours.
