--- a/3. Github-Copilot-Agent-and-Commands.md
+++ b/3. Github-Copilot-Agent-and-Commands.md
@@ -54,3 +54,8 @@ Search for specific code snippets or functions across your workspace.
 
 ![image](https://github.com/user-attachments/assets/0decf283-dda1-40b6-a0af-aa813f94fd9c)
 
+## terminal
+
+![image](https://github.com/user-attachments/assets/e336b9e0-716e-40eb-a17a-d4740cc8aa1f)
+
+
