--- a/3. Github-Copilot-Agent-and-Commands.md
+++ b/3. Github-Copilot-Agent-and-Commands.md
@@ -2,55 +2,88 @@
 
 ## Index
 
-1. [Use Of @workspace](#use-of-workspace-agent)
-2. [Generating a code with @workspace](#generating-a-code-with-workspace)
-3. [Running tests](#running-tests)
-4. [Searching for Code](#searching-for-code)
-5. [Take git commands help according to project guidelines](#take-git-commands-help-according-to-project-guidelines)
+1. [@workspace](#workspace)
+2. [@terminal](#terminal)
+3. [#editor](#editor)
+4. [#selection](#selection)
 
 ---
 
-## Use of @workspace agent
+## @workspace
 
-## Generating a code with @workspace
+The @workspace agent allows you to interact with your project files and perform various tasks within your workspace.
 
-Generate boilerplate code or specific functions in the context of your workspace.
+Common Commands:
 
-```
-@workspace generate a controller file for endpoint 'v1/icici/payments' which will be post webhook call from third party service.
-```
+- Navigating Files: `@workspace: Open file src/app/app.component.ts`
+- Searching for Code:
 
-![image](https://github.com/user-attachments/assets/50e6f653-8dd9-431b-a312-fadcdcc31365)
-![image](https://github.com/user-attachments/assets/fc8c0191-47ef-4139-9821-3616b4f3d832)
-![image](https://github.com/user-attachments/assets/bf56566f-c43c-46ac-92ca-1b7a85d5f430)
+  Search for specific code snippets or functions across your workspace.
 
-## Running tests
+  ```
+  @workspace find a function from project which is used for generating random alpha numeric code
+  ```
 
-Run tests for specific files or the entire project.
+  ![image](https://github.com/user-attachments/assets/5f9a50fe-3b92-4f3a-91da-dbb4e1501244)
 
-```
-@workspace: Run tests in src/app/app.component.spec.ts
-```
+- Refactoring Code: `@workspace: Replace all instances of var with let`
+- Running Tests: `@workspace: Run tests in src/app/app.component.spec.ts`
 
-Ex:
+  Run tests for specific files or the entire project.
 
-![Screenshot 2024-08-04 094718](https://github.com/user-attachments/assets/6d839d33-bf7e-4597-821c-e0393970247a)
+  ```
+  @workspace: Run tests in src/app/app.component.spec.ts
+  ```
 
-## Searching for Code
+  Ex:
 
-Search for specific code snippets or functions across your workspace.
+  ![Screenshot 2024-08-04 094718](https://github.com/user-attachments/assets/6d839d33-bf7e-4597-821c-e0393970247a)
 
-```
-@workspace find a function from project which is used for generating random alpha numeric code
-```
+- Committing Changes: `@workspace: Commit changes with message "Fixed issue with data fetching"`
 
-![image](https://github.com/user-attachments/assets/5f9a50fe-3b92-4f3a-91da-dbb4e1501244)
-
-## Take git commands help according to project guidelines
+- Take git commands help according to project guidelines
 
 ![image](https://github.com/user-attachments/assets/2d54c6f8-b439-4a4a-8ae9-1ef02a415065)
 
-## Take help for running ,linting and code formatting of app
+- Take help for running ,linting and code formatting of app
 
 ![image](https://github.com/user-attachments/assets/0decf283-dda1-40b6-a0af-aa813f94fd9c)
 
+## @terminal
+
+The @terminal agent allows you to run terminal commands directly from the chat interface.
+
+Common Commands:
+
+- Ask question regarding project `@terminal How to start nodejs project ?`
+
+![image](https://github.com/user-attachments/assets/e336b9e0-716e-40eb-a17a-d4740cc8aa1f)
+
+- Running Scripts: `@terminal: npm run build`
+- Installing Dependencies: `@terminal: How to install axios npm package?`
+
+![image](https://github.com/user-attachments/assets/4f99ae4a-02af-4c2b-8f32-47df8a412e12)
+
+- Checking Git Status: `@terminal: check the status`
+- Stopping the Application: `@terminal: Stop the application`
+
+## #editor
+
+The @editor agent helps you interact with the code editor, such as making changes to the code, formatting, and more.
+
+Common Commands:
+
+- Formatting Code: `#editor: Format code in src/app/app.component.ts`
+- Inserting Code: `#editor: Insert function fetchData at line 10 in src/app/app.component.ts`
+- Replacing Code: `#editor: Replace function fetchData with new implementation in src/app/app.component.ts`
+- Highlighting Code: `#editor: Highlight lines 10-20 in src/app/app.component.ts`
+
+## #file
+
+The #file agent will add reference of that file to copilot chat .
+
+![image](https://github.com/user-attachments/assets/b5462f74-4e9a-4a62-9895-3d2ff78232e2)
+
+## #selection
+
+The #selection agent will add reference of selected code snippet of file to copilot chat and perform on provided prompt.
