--- a/3. Github-Copilot-Agent-and-Commands.md
+++ b/3. Github-Copilot-Agent-and-Commands.md
@@ -1,4 +1,4 @@
-# Github Copilot Agents
+# Github Copilot agents, commands and chat variables
 
 ## Index
 
@@ -8,46 +8,19 @@
 4. [#selection](#selection)
 
 ---
-
 ## @workspace
 
-The @workspace agent allows you to interact with your project files and perform various tasks within your workspace.
+The @workspace has context about the code in your workspace. Use @workspace when you want Copilot to consider the structure of your project, how different parts of your code interact, or design patterns in your project. @workspace can find and attach relevant files to the context automatically.
 
-Common Commands:
+### Common usecases:
+- Search for specific code in the project:
+```
+@workspace find a function from project which is used for generating random alpha numeric code
+```
+```
+@workspace find the code where api request retry capabilities are built.
+```
 
-- Navigating Files: `@workspace: Open file src/app/app.component.ts`
-- Searching for Code:
-
-  Search for specific code snippets or functions across your workspace.
-
-  ```
-  @workspace find a function from project which is used for generating random alpha numeric code
-  ```
-
-  ![image](https://github.com/user-attachments/assets/5f9a50fe-3b92-4f3a-91da-dbb4e1501244)
-
-- Refactoring Code: `@workspace: Replace all instances of var with let`
-- Running Tests: `@workspace: Run tests in src/app/app.component.spec.ts`
-
-  Run tests for specific files or the entire project.
-
-  ```
-  @workspace: Run tests in src/app/app.component.spec.ts
-  ```
-
-  Ex:
-
-  ![Screenshot 2024-08-04 094718](https://github.com/user-attachments/assets/6d839d33-bf7e-4597-821c-e0393970247a)
-
-- Committing Changes: `@workspace: Commit changes with message "Fixed issue with data fetching"`
-
-- Take git commands help according to project guidelines
-
-![image](https://github.com/user-attachments/assets/2d54c6f8-b439-4a4a-8ae9-1ef02a415065)
-
-- Take help for running ,linting and code formatting of app
-
-![image](https://github.com/user-attachments/assets/0decf283-dda1-40b6-a0af-aa813f94fd9c)
 
 ## @terminal
 
