Improved @workspace usage doc

--- a/3. Github-Copilot-Agent-and-Commands.md
+++ b/3. Github-Copilot-Agent-and-Commands.md
@@ -21,6 +21,13 @@ The @workspace has context about the code in your workspace. Use @workspace when
 @workspace find the code where api request retry capabilities are built.
 ```
 
+- Attach relevant files in the context:
+When we are asking Copilot to do some task and we want Copilot to also find and attached relevant files in the context.
+```
+@workspace Write a repository function to get users greater than 18 years.
+``` 
+NOTE: Workspace will try to find and attach relevant files but if we know the relevant files then we should attach with #file explicitly.
+
 
 ## @terminal
 
