Added more examples for workspace agent

--- a/3. Github-Copilot-Agent-and-Commands.md
+++ b/3. Github-Copilot-Agent-and-Commands.md
@@ -10,23 +10,41 @@
 ---
 ## @workspace
 
-The @workspace has context about the code in your workspace. Use @workspace when you want Copilot to consider the structure of your project, how different parts of your code interact, or design patterns in your project. @workspace can find and attach relevant files to the context automatically.
+The @workspace has context about the code in your workspace. Use @workspace when you want Copilot to consider the structure of your project, how different parts of your code interact, or design patterns in your project. @workspace can find and attach relevant files to the request context automatically.
 
 ### Common usecases:
-- Search for specific code in the project:
+- Understanding the codebase: 
+@workspace can help by analyzing your codebase and providing insights.
+```
+@workspace how is authentication implemented in the project?
+```
+```
+@workspace how is error handling implemented in the project?
+```
+
+- Navigating and locating code:
 ```
 @workspace find a function from project which is used for generating random alpha numeric code
 ```
 ```
 @workspace find the code where api request retry capabilities are built.
 ```
+```
+@workspace where is the database connection string configured?
+```
 
 - Attach relevant files in the context:
-When we are asking Copilot to do some task and we want Copilot to also find and attached relevant files in the context.
+When we are asking Copilot to do some task and we also want Copilot to find and attached relevant files in the context.
 ```
 @workspace Write a repository function to get users greater than 18 years.
 ``` 
 NOTE: Workspace will try to find and attach relevant files but if we know the relevant files then we should attach with #file explicitly.
+```
+@workspace create a README file summarizing the project's features
+```
+```
+@workspace add a new API route for the forgot password form
+```
 
 
 ## @terminal
