--- a/3. Github-Copilot-Agent-and-Commands.md
+++ b/3. Github-Copilot-Agent-and-Commands.md
@@ -14,8 +14,6 @@ The @workspace has context about the code in your workspace. Use @workspace when
 
 ### Common usecases:
 - `Understanding the codebase`:
-
-@workspace can help by analyzing your codebase and providing insights.
 ```
 @workspace how is authentication implemented in the project?
 ```
@@ -36,7 +34,7 @@ The @workspace has context about the code in your workspace. Use @workspace when
 
 - `Attach relevant files in the context`:
 
-When we are asking Copilot to do some task and we also want Copilot to find and attached relevant files in the context.
+When we are asking Copilot to do some task and we also want Copilot to find and attach relevant files in the context.
 ```
 @workspace Write a repository function to get users greater than 18 years.
 ``` 
