Added terminal agent usecases

--- a/3. Github-Copilot-Agent-and-Commands.md
+++ b/3. Github-Copilot-Agent-and-Commands.md
@@ -47,22 +47,37 @@ When we are asking Copilot to do some task and we also want Copilot to find and 
 NOTE: Workspace will try to find and attach relevant files but if we know the relevant files then we should attach with #file explicitly.
 
 ## @terminal
+The @terminal agent allows you to write terminal commands from natural language and enable you to run the commands. Now we don't have to worry about Linux commands.
 
-The @terminal agent allows you to run terminal commands directly from the chat interface.
-
-Common Commands:
-
-- Ask question regarding project `@terminal How to start nodejs project ?`
-
-![image](https://github.com/user-attachments/assets/e336b9e0-716e-40eb-a17a-d4740cc8aa1f)
-
-- Running Scripts: `@terminal: npm run build`
-- Installing Dependencies: `@terminal: How to install axios npm package?`
-
-![image](https://github.com/user-attachments/assets/4f99ae4a-02af-4c2b-8f32-47df8a412e12)
-
-- Checking Git Status: `@terminal: check the status`
-- Stopping the Application: `@terminal: Stop the application`
+### Common usecases:
+```
+@terminal show me the contents of the .bashrc file
+```
+```
+@terminal stage all changes and commit with the message "Initial setup completed"
+```
+```
+@terminal show commit history for the current branch
+```
+```
+@terminal compile the TypeScript files in the src folder
+```
+```
+@terminal show the current IP address
+```
+```
+@terminal display open network ports
+```
+```
+@terminal change file permissions for script.sh to be executable
+```
+```
+@terminal set an environment variable API_KEY with a specific value
+```
+```
+@terminal create a shell script to check server status and send an email if it’s down
+```
+NOTE: We can also open an inline chat in vscode integrated terminal via inline chat shortcut or right click menu.
 
 ## #editor
 
