added usage doc for vscode agent

--- a/3. Github-Copilot-Agent-and-Commands.md
+++ b/3. Github-Copilot-Agent-and-Commands.md
@@ -4,6 +4,7 @@
 
 1. [@workspace](#workspace)
 2. [@terminal](#terminal)
+3. [@vscode](#vscode)
 3. [#editor](#editor)
 4. [#selection](#selection)
 
@@ -78,6 +79,37 @@ The @terminal agent allows you to write terminal commands from natural language 
 @terminal create a shell script to check server status and send an email if it’s down
 ```
 NOTE: We can also open an inline chat in vscode integrated terminal via inline chat shortcut or right click menu.
+
+
+## @vscode:
+@vscode agent is used to get help around vscode editor through natural language.
+
+### Common usecases:
+```
+@vscode enable auto-format on save
+```
+```
+@vscode configure the editor to use 4 spaces for indentation
+```
+```
+@vscode set the theme to Dark+
+```
+```
+@vscode arrange the editor layout in split view
+```
+```
+@vscode configure this workspace to use the Python interpreter located at /env/bin/python
+```
+```
+@vscode locate where to change tabs to spaces in settings
+```
+```
+@vscode locate the auto-save delay setting
+```
+```
+@vscode show me the shortcut to jump to the next occurrence of a word
+```
+
 
 ## #editor
 
