--- a/3. Github-Copilot-Agent-and-Commands.md
+++ b/3. Github-Copilot-Agent-and-Commands.md
@@ -110,6 +110,75 @@ NOTE: We can also open an inline chat in vscode integrated terminal via inline c
 @vscode show me the shortcut to jump to the next occurrence of a word
 ```
 
+## /explain:
+The /explain command is used to get a detailed explanation of selected code snippets or specific lines in your codebase. It provides insights into how the code works, what each part of the code does, and why certain functions or methods are used. This command is especially useful for understanding complex or unfamiliar code, improving readability, and speeding up onboarding in collaborative projects.
+
+### Usecases:
+```
+/explain the logic behind the nested if-else conditions
+```
+```
+/explain the regular expression used in the sanitizeInput function
+```
+```
+/explain the recursive calls in the searchTree function
+```
+```
+/explain this SQL query joining multiple tables
+```
+```
+/explain the parameters used in this axios call
+```
+```
+/explain this statistical calculation for standard deviation
+```
+```
+/explain the data flow from parent to child components
+```
+```
+/explain how this Redux action updates the state
+```
+```
+`/explain how exceptions are managed in this function`
+```
+
+## /fix:
+The /fix command is designed to automatically identify and suggest solutions for issues or errors in your code. This can include syntax errors, logical issues, performance bottlenecks, and security vulnerabilities. The /fix command is particularly useful for debugging, optimizing, and refactoring code without needing to manually search for potential problems.
+
+### Usecases:
+```
+/fix missing semicolons and braces in this code block
+```
+```
+/fix this function so it returns the correct output
+```
+```
+/fix performance issues in this data processing function
+```
+```
+/fix the SQL injection vulnerability in this query
+```
+```
+/fix this code to prevent cross-site scripting
+```
+```
+/fix the code to manage empty arrays
+```
+```
+/fix this function by refactoring it into smaller parts
+```
+```
+/fix variable names to make the code clearer
+```
+```
+/fix the data type issues in this function
+```
+```
+/fix the error message to be more descriptive
+```
+```
+/fix the try-catch block to cover all potential issues
+```
 
 ## #editor
 
