added usage doc for #file chat variable

--- a/3. Github-Copilot-Agent-and-Commands.md
+++ b/3. Github-Copilot-Agent-and-Commands.md
@@ -139,7 +139,7 @@ The /explain command is used to get a detailed explanation of selected code snip
 /explain how this Redux action updates the state
 ```
 ```
-`/explain how exceptions are managed in this function`
+/explain how exceptions are managed in this function
 ```
 
 ## /fix:
@@ -180,7 +180,22 @@ The /fix command is designed to automatically identify and suggest solutions for
 /fix the try-catch block to cover all potential issues
 ```
 
-## #editor
+## /tests:
+
+
+## #file:
+#file variable is a context reference that allows you to specify particular files within your workspace when posing questions or commands. By referencing a file directly, you provide Copilot with precise context, enabling it to generate more accurate and relevant responses tailored to the content of that file. #file can be used in inline chat also.
+
+### Examples:
+```
+@workspace Write test cases covering positive and negative scenarios for maximum code coverage. Refer way to write tests from the files #file:video-kyc-webhook-fallback-scheduler.spec.ts. More context #file:repayment.repository.ts #file:repayment.entity.ts
+```
+```
+@workspace write a repository function to get repayments by pending retry count, where pending retries are more than 1, repayment are in failed state and repayments are schedule for today. #file:repayment.entity.ts #file:repayments.enum.ts #file:repayment.types.ts
+```
+
+
+
 
 The @editor agent helps you interact with the code editor, such as making changes to the code, formatting, and more.
 
