added usage doc for #selection

--- a/3. Github-Copilot-Agent-and-Commands.md
+++ b/3. Github-Copilot-Agent-and-Commands.md
@@ -184,7 +184,7 @@ The /fix command is designed to automatically identify and suggest solutions for
 
 
 ## #file:
-#file variable is a context reference that allows you to specify particular files within your workspace when posing questions or commands. By referencing a file directly, you provide Copilot with precise context, enabling it to generate more accurate and relevant responses tailored to the content of that file. #file can be used in inline chat also.
+#file variable is a context reference that allows you to specify particular files within your workspace when posing questions or commands. By referencing a file directly, you provide Copilot with precise context, enabling it to generate more accurate and relevant responses tailored to the content of that file.
 
 ### Examples:
 ```
@@ -195,6 +195,22 @@ The /fix command is designed to automatically identify and suggest solutions for
 ```
 
 
+## #selection:
+The #selection is used to focus on a specific code selection within your file. When you reference #selection, Copilot understands that you want it to analyze, explain, or work on the particular highlighted section of code, making it ideal for targeted tasks like explanations, refactoring, or generating tests for selected code.
+
+### Examples:
+```
+/fix #selection Refactor to improve readability.
+```
+```
+/explain #selection SQL query joining multiple tables
+```
+```
+/fix #selection so it returns the correct output
+```
+```
+/tests #selection generate unit tests for the function covering all positive and negative scenarios for maximum code coverage
+```
 
 
 The @editor agent helps you interact with the code editor, such as making changes to the code, formatting, and more.
