update copilot admin doc

--- a/6. github-copilot-admin-doc.md
+++ b/6. github-copilot-admin-doc.md
@@ -1,10 +1,11 @@
-# Github Copilot Stats:
+# Github copilot admin doc:
+
+## Github Copilot Stats:
 Copilot provide us usage stats to see how copilot is used by members in the organization.
 
 See more details about usage stats API [here](https://docs.github.com/en/rest/copilot/copilot-usage?apiVersion=2022-11-28#get-a-summary-of-copilot-usage-for-organization-members)
 
-
-# How to generate API token to collect Copilot stats:
+### How to generate API token to collect Copilot stats:
 ***A user with admin access or copilot manage billing access should generate this token.***
 
 1. In the upper-right corner of any page on GitHub, click your profile photo, then click Settings.
@@ -19,5 +20,8 @@ See more details about usage stats API [here](https://docs.github.com/en/rest/co
 9. Copy the token and use to get stats.
 
 
+## Ignore env, secrets or other files for all members:
+Follow instruction: [Configuring content exclusions for your organization](https://docs.github.com/en/copilot/managing-copilot/configuring-and-auditing-content-exclusion/excluding-content-from-github-copilot#configuring-content-exclusions-for-your-organization)
 
+Follow instruction: [Configuring content exclusions for your repository](https://docs.github.com/en/copilot/managing-copilot/configuring-and-auditing-content-exclusion/excluding-content-from-github-copilot#configuring-content-exclusions-for-your-repository)
 
