update installation doc

--- a/2. Github-copilot-vscode-settings.md
+++ b/2. Github-copilot-vscode-settings.md
@@ -3,20 +3,16 @@
 ## Index
 
 1. [Installation](#installation)
-2. [Basic Usage](#basic-usage)
-3. [More features of copilot extension](#more-features-of-copilot-extension)
-4. [Copilot extension options](#copilot-extension-options)
-5. [Use Slash Commands](#use-slash-commands)
-6. [To ignore secret files from copilot use below settings.](#to-ignore-secret-files-from-copilot-use-below-settings)
+2. [To ignore secret files from copilot use below settings.](#to-ignore-secret-files-from-copilot-use-below-settings)
 
 ---
 
 ## Installation
-Follow this easy step by step guide with visual from official VSCode website to setup Copilot
+Follow this easy step by step guide with visuals from official VSCode website to setup copilot
 [Set up GitHub Copilot in VS Code](https://code.visualstudio.com/docs/copilot/setup)
 
 
-## Individual - To ignore secrets or other files from copilot use below settings:
+## To ignore env, secrets or other files from Copilot in VScode:
 .vscode/settings.json add below config.
 
 ```
