improved admin doc

--- a/6. github-copilot-admin-doc.md
+++ b/6. github-copilot-admin-doc.md
@@ -25,3 +25,6 @@ Follow instruction: [Configuring content exclusions for your organization](https
 
 Follow instruction: [Configuring content exclusions for your repository](https://docs.github.com/en/copilot/managing-copilot/configuring-and-auditing-content-exclusion/excluding-content-from-github-copilot#configuring-content-exclusions-for-your-repository)
 
+
+## Enable or disable Copilot features for all members:
+Use following link to enable or disable some feature like chat, access to Bing, enable new models(Anthropic Claude 3.5 Sonnet, OpenAI o1): [Enabling Copilot features in your organization](https://docs.github.com/en/copilot/managing-copilot/managing-github-copilot-in-your-organization/managing-policies-for-copilot-in-your-organization#enabling-copilot-features-in-your-organization)
