--- a/2. Github-copilot-vscode-settings.md
+++ b/2. Github-copilot-vscode-settings.md
@@ -3,7 +3,7 @@
 ## Index
 
 1. [Installation](#installation)
-2. [To ignore secret files from copilot use below settings.](#to-ignore-secret-files-from-copilot-use-below-settings)
+2. [To ignore env, secrets or other files from Copilot in VScode](#to-ignore-env-secrets-or-other-files-from-copilot-in-vscode)
 
 ---
 
