--- a/2. copilot-features.md
+++ b/2. copilot-features.md
@@ -14,11 +14,12 @@ Copilot does the code completion alongside us based on the current code written 
 
 ## Copilot Chat:
 The superpower lies here!!! Copilot chat should be used a lot to see notifiable different in productivity gain.
+Inline chat and chat in window are mostly similar with with similar capabilities.
 
 ### Why to use chat:
-- Chat is more powerful then auto completion feature
+- Chat is more powerful than auto completion feature
 - Chat use GPT 4o model by default which has larger context window than GPT 3 or GPT 3.5 model which is used in auto completion
-- Chat allows us to use copilot provided agents, command and chat variable, which helps us to create better context
+- Chat enables the use of Copilot-provided agents, commands, and variables, which helps us to create better context
 - We can directly create file from the generate code in chat
 - We get better explanation of the generated code
 - We can use our prompt engineering skills to get desired results
@@ -43,3 +44,42 @@ Mostly we use it when we want to generate large code in various scenarios. But t
 - Existing code readability definitely helps
 - Attach known files related to your chat request using #file
 - Change model like GPT 4o, Cluade 3.5 Sonnet or GPT o1 preview, whichever is giving better result
+
+
+## Comment based code generation:
+Instead of using comment based code generation better to use copilot chat which is more powerful.
+
+
+## Test cases generation:
+
+## Refactor code:
+Use Copilot to help us write better code.
+
+### Examples:
+- Use it to write better names, press F2(rename shortcut) and copilot can provide better name as per current code context
+- Refactor a large function into smaller ones
+- Ask copilot about what coding design principles are breaking in current code and ask to fix it.
+
+See more refactoring usecases with example from copilot team here: [Refactoring code with GitHub Copilot
+](https://docs.github.com/en/copilot/using-github-copilot/example-use-cases/refactoring-code-with-github-copilot)
+
+
+## Documenting the code:
+Copilot can help us write API documentation, class documentation, etc
+
+### Examples:
+```
+@workspace Generate a README for this project.
+```
+```
+Add a file-level comment summarizing its purpose.
+```
+```
+Add comments to explain the YAML configuration.
+```
+```
+Add comments to document the API endpoint with OpenAPI version 3.0.
+```
+```
+Add a docstring to the calculate_sum function
+```
