added feature documentation

--- a/2. copilot-features.md
+++ b/2. copilot-features.md
@@ -1,6 +1,12 @@
-## Index
+# Important Copilot Features
 
+## Index
 1. [Code intellisense/completion](#code-intellisensecompletion)
+2. [Copilot Chat](#copilot-chat)
+3. [Comment based code generation](#comment-based-code-generation)
+4. [Test cases generation](#test-cases-generation)
+5. [Code Refactoring](#refactor-code)
+6. [Code documentation](#documenting-the-code)
 
 
 ## Code intellisense/completion:
@@ -51,6 +57,7 @@ Instead of using comment based code generation better to use copilot chat which 
 
 
 ## Test cases generation:
+
 
 ## Refactor code:
 Use Copilot to help us write better code.
