--- a/1. Copilot-Course.md
+++ b/1. Copilot-Course.md
@@ -21,3 +21,9 @@ In case you missed the practical exercises , use the below link to complete thos
 [Practical Exercise](https://github.com/microsoft/Mastering-GitHub-Copilot-for-Paired-Programming/tree/main/04-Using-GitHub-Copilot-with-JavaScript)
 
 **NOTE: Practical and readings are both equally important to understand prompt engineering and copilot use cases.**
+
+## How to download the course completion certificate?
+You must complete all the course modules to download the certificate.
+
+To download certificate:
+Click Profile Icon -> Achievements -> Learning Paths -> Click on Print Icon
