--- a/3.copilot-features.md
+++ b/3.copilot-features.md
@@ -20,7 +20,7 @@ Copilot does the code completion alongside us based on the current code written 
 
 ## Copilot Chat:
 The superpower lies here!!! Copilot chat should be used a lot to see notifiable different in productivity gain.
-Inline chat and chat in window are mostly similar with with similar capabilities.
+Inline chat and chat in window are mostly same with with similar capabilities.
 
 ### Why to use chat:
 - Chat is more powerful than auto completion feature
