--- a/5.best-practices.md
+++ b/5.best-practices.md
@@ -3,13 +3,13 @@
 ## Index
 
 1. [Open relevant files](#open-relevant-files)
+2. [Context is the King](#context-is-the-king)
 3. [Meaningful names matters](#meaningful-names-matters)
 4. [Specificity](#specificity)
 5. [Iterative Refinement](#iterative-refinement)
 6. [Proper prompt with context and details.](#proper-prompt-with-context-and-details)
-7. [Make your ask simple and specific. Aim to receive a short output from GitHub Copilot:](#make-your-ask-simple-and-specific-aim-to-receive-a-short-output-from-github-copilot)
-8. [Give GitHub Copilot an example or two.](#give-github-copilot-an-example-or-two)
-9. [Review generated code and Edit](#review-generated-code-and-edit)
+7. [Give GitHub Copilot an example or two.](#give-github-copilot-an-example-or-two)
+8. [Review generated code and Edit](#review-generated-code-and-edit)
 
 ---
 
