--- a/6.prompt-collection.md
+++ b/6.prompt-collection.md
@@ -94,7 +94,7 @@ Ex: call third party service to send a notification that we updated status of re
 
 ![att_6_for_29884483](https://github.com/Talentica/github-copilot-knowledge-base/assets/109061225/5f5efae3-dad6-40d7-bdc2-7ab43c0a394e)
 
-Ex 2: Update all empty createdBy in repayments where repayment.type === RepaymentType.AUTOMATIC add createdBy = RepaymentInitiator.LIGHT_SYSTEM else RepaymentInitiator.PARTNER, do it most optimised way.
+Ex 2: Update all empty createdBy in repayments where repayment.type === RepaymentType.AUTOMATIC add createdBy = RepaymentInitiator.LIGHT_SYSTEM else RepaymentInitiator.PARTNER, do it most optimized way.
 
 ![att_3_for_29884483](https://github.com/Talentica/github-copilot-knowledge-base/assets/109061225/beb59093-b346-4256-baa4-e6b1718d88be)
 
