--- a/7. admin-doc.md
+++ b/7. admin-doc.md
@@ -1,5 +1,10 @@
 # Github copilot admin doc:
 
+## Index:
+1. [Github Copilot Stats](#github-copilot-stats)
+2. [Ignore env, secrets or other files for all members](#ignore-env-secrets-or-other-files-for-all-members)
+3. [Enable or disable Copilot features for all members](#enable-or-disable-copilot-features-for-all-members)
+
 ## Github Copilot Stats:
 Copilot provide us usage stats to see how copilot is used by members in the organization.
 
