Updated sample screenshots for agent

--- a/4.agent-and-commands.md
+++ b/4.agent-and-commands.md
@@ -35,9 +35,6 @@ The @workspace has context about the code in your workspace. Use @workspace when
 ```
 @workspace where is the database connection string configured?
 ```
-
-- `Attach relevant files in the context`:
-
 When we are asking Copilot to do some task and we also want Copilot to find and attach relevant files in the context.
 ```
 @workspace Write a repository function to get users greater than 18 years.
@@ -49,6 +46,9 @@ When we are asking Copilot to do some task and we also want Copilot to find and 
 @workspace add a new API route for the forgot password form
 ```
 NOTE: Workspace will try to find and attach relevant files but if we know the relevant files then we should attach with #file explicitly.
+
+![Copilot-Workspace](https://github.com/user-attachments/assets/d3c28f7e-81fc-4e59-98ec-553a72d6cd03)
+
 
 ## @terminal
 The @terminal agent allows you to write terminal commands from natural language and enable you to run the commands. Now we don't have to worry about Linux commands.
@@ -83,6 +83,7 @@ The @terminal agent allows you to write terminal commands from natural language 
 ```
 NOTE: We can also open an inline chat in vscode integrated terminal via inline chat shortcut or right click menu.
 
+![Copilot-Terminal](https://github.com/user-attachments/assets/19b1a264-e26a-4b96-b3ae-4375acf127c6)
 
 ## @vscode:
 @vscode agent is used to get help around vscode editor through natural language.
