added test generation doc

--- a/3.copilot-features.md
+++ b/3.copilot-features.md
@@ -57,6 +57,35 @@ Instead of using comment based code generation better to use copilot chat which 
 
 
 ## Test cases generation:
+Copilot saves the maximum time in writing unit/integration/e2e test cases.
+We can generate test cases by two ways,
+  1. @workspace with prompt
+  2. /tests command with prompt
+As per our experience @workspace give better result.
+
+### How to use this feature effectively:
+- Use @workspace agent to generate test cases
+- Mention in the prompt to cover positive and negative scenarios to cover all the code execution flows.
+- With #file, add a sample spec file so that Copilot can write test cases in similar way.
+- With #file also attach other related files in the context
+- We can also select some specific function and use #selection in prompt to generate test cases
+- If Copilot is missing scenarios then we can break process in two steps, in first prompt we ask Copilot to generate all test cases and then in the follow-up prompt we ask Copilot to implement them.
+
+### Examples:
+```
+@workspace Write unit test case for #file:initiate-esign.service.ts, cover all positive and negative scenarios for maximum coverage. Do it step by step by identifying all test scenarios first and them implement them. Refer this file to see how other service test cases are written #file:post-disbursement-in-lms.service.spec.ts
+```
+![](https://github.com/user-attachments/assets/1f908cdb-8915-41d2-9860-d9a1542042f1)
+![](https://github.com/user-attachments/assets/b70c0130-0408-44d7-bde4-7132be664cfa)
+```
+@workspace Write test case for controller #file:bulk-loan-application.controller.ts. Cover all positive and negative cases. Also handle RoleAuthGuard properly.
+```
+```
+@workspace #selection Write unit test cases for this function covering all positive and negative scenarios for maximum coverage. Do it step by step by identifying all test scenarios first and them implement them.
+```
+```
+@workspace Identify missing unit test scenarios in this spec file #file:post-disbursement-in-lms.service.spec.ts to cover all positive and negative scenarios for maximum coverage. Do it step by step by identifying the missing scenarios first and them implement them.
+```
 
 
 ## Refactor code:
