--- a/4.agent-and-commands.md
+++ b/4.agent-and-commands.md
@@ -185,6 +185,8 @@ The /fix command is designed to automatically identify and suggest solutions for
 ```
 
 ## /tests:
+As per our experience it is better to use @workspace agent then /tests command for better results.
+Refer ![Test cases generation](/3.copilot-features.md#test-cases-generation)
 
 
 ## #file:
