improved controller doc

--- a/6.prompt-collection.md
+++ b/6.prompt-collection.md
@@ -19,25 +19,15 @@
 ---
 
 ## Prompt for generating controllers.
+To generate a large code like controller with its request body, use @workspace agent. Explain about the controller with appropriate info
+to get desired result. You can also attach existing controller and request body to copy your style.
 
-Generate a controller class as specified below.
-
-Ex 1 : Using top level comments
-
-- Create a nestjs controller to update repayment entity createdBy and frequency columns.
-- Generate controller script by taking reference from file mandate-creation.controller.ts.
-- Also consider a swagger documentation implementation as specified in mandate-creation.controller.ts.
-  ![image-20240529-032138](https://github.com/Talentica/github-copilot-knowledge-base/assets/109061225/ecd86543-6b37-45ec-9d8a-ffa72eb95c40)
-
-Ex 2: Using @workspace agent
-
+Example:
 ```
-@workspace generate a controller file for endpoint 'v1/icici/payments' which will be post webhook call from third party service.
+@workspace Create a controller to send otp for aadhar verification. Request body of this request takes aadharNumber, name, consent(boolean). It should be a post request with path '/v1/loan-applications/:loanApplicationId/aadhaar/send-otp'. Also add swagger documentation for controller and request body. Refer files #file:pan-verification.controller.ts #file:pan-verification.request.ts.
 ```
+![](https://github.com/user-attachments/assets/7769b6d5-5fd5-40d4-9b26-37ee0b26f008)
 
-![image](https://github.com/user-attachments/assets/50e6f653-8dd9-431b-a312-fadcdcc31365)
-![image](https://github.com/user-attachments/assets/fc8c0191-47ef-4139-9821-3616b4f3d832)
-![image](https://github.com/user-attachments/assets/bf56566f-c43c-46ac-92ca-1b7a85d5f430)
 
 
 ## Prompt for service file code generation.
