improved entity generation prompt

--- a/6.prompt-collection.md
+++ b/6.prompt-collection.md
@@ -3,7 +3,7 @@
 ### Index
 
 1. [Prompt for generating controllers.](#prompt-for-generating-controllers)
-2. [Prompt for service file code generation.](#prompt-for-service-file-code-generation)
+2. [Prompt for service file code generation.](#service-file-code-generation)
 3. [Prompt for generating db repository functions](#prompt-for-generating-db-repository-functions)
 4. [Prompt for calling third party service](#prompt-for-calling-third-party-service)
 5. [Prompt for generate smaller utils](#prompt-for-generate-smaller-utils)
@@ -29,31 +29,17 @@ Example:
 ![](https://github.com/user-attachments/assets/7769b6d5-5fd5-40d4-9b26-37ee0b26f008)
 
 
+## Service file code generation.
+Generating a controller file with Copilot makes sense as most of the controller files remain same. But in a service business logic is verify specific to the API so it is not a good idea to generate a, entire service file with Copilot. Make use of Copilot autocomplete and write some small functions of this service logic using Copilot.
 
-## Prompt for service file code generation.
-
-Generate a service class as specified below
-
-- Should update createdBy and frequency in the repayment table.
-- Update createdBy with light_system where repayment type is automatic and partner where repayment type is manual.
-- Update frequency as recurring where repayment type is automatic and adhoc where repayment type is manual.
-
-![image-20240529-033309](https://github.com/Talentica/github-copilot-knowledge-base/assets/109061225/827e751e-b842-4d2f-967c-60856657f0dc)
-
-![att_7_for_29884483](https://github.com/Talentica/github-copilot-knowledge-base/assets/109061225/6b277ddd-d5eb-4f9c-abd6-e2361dc5a386)
 
 ## Prompt for generting db entity file
-
 ```
-@workspace Create entity file for #file:icici-mandate-sequence.entity.ts , take reference of #file:repayment.entity.ts .
+@workspace Create a video-kyc DB entity with below columns id: auto increment id status: initiated, successful, failed customerId, validTill, agentId: string, auditorId: string, details: JSON
 
-Table name : IciciMandateSequence I have columns below.
-mandateId
-executeSeqNum
-notificationSeqNum
+One customer can have many video-kyc. Refer files #file:customer.entity.ts
 ```
-
-![image](https://github.com/user-attachments/assets/dfa19903-f04d-41b7-bc35-1479bdb51706)
+![](https://github.com/user-attachments/assets/6b123fe5-dccc-4d84-a37c-e350524d4934)
 
 
 ## Prompt for generating db repository functions
