added more references

--- a/8.references.md
+++ b/8.references.md
@@ -2,6 +2,8 @@
 
 We have covered most of the best practices and fruitful technics from the articles but if you want to deep dive more into copilot features then you can use below blogs and articles.
 
+- [GitHub Copilot documentation](https://docs.github.com/en/copilot)
+- [Copilot VSCode documentation](https://code.visualstudio.com/docs/copilot/overview)
 - [Using GitHub Copilot Effectively](https://medium.com/@rajesh.jadav/using-github-copilot-effectively-8b46604299ed )
 - [AI Review: GitHub Copilot](https://betterprogramming.pub/ai-review-github-copilot-d43afde51a5a )
 - [How I used GitHub Copilot to build a browser extension](https://github.blog/2023-05-12-how-i-used-github-copilot-to-build-a-browser-extension/ ) 
